# super-harness

./: .gitignore  .importlinter  AGENTS.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: decision-check.yml  doc-check.yml  lint.yml  merge-gate.yml  test.yml
.harness/: adapters.yaml  derived-docs.yaml  policy.yaml  review-governance.yaml  source-paths.yaml  verification.yaml
.harness/attestations/: 2026-06-04-layer2-merge-gate.jsonl  2026-06-04-review-identity-substrate.jsonl  2026-06-08-decision-records-anchors.jsonl  2026-06-11-doc-leg-derivable-docs.jsonl  2026-06-15-decision-text-lock.jsonl  2026-06-16-decision-executable-checks.jsonl  2026-06-17-agents-md-decision-conformance.jsonl  2026-06-17-docs-refresh-decision-conformance.jsonl  2026-06-20-tier-2-reviewable-anchors.jsonl  2026-06-23-arm-decision-teeth.jsonl  2026-06-23-auto-review-hardening-slice2.jsonl  2026-06-23-auto-review-hardening.jsonl  2026-06-23-check-drafting-assist.jsonl  2026-06-25-doc-deadref-gate.jsonl  2026-06-26-arm-legacy-decisions.jsonl  2026-06-26-gate-escape-hatch-hardening.jsonl  2026-06-26-generalize-gate-bypass-wording.jsonl  2026-06-26-language-profile-doc-refs.jsonl  2026-06-27-architecture-fitness.jsonl  2026-06-30-core-sensors-decoupling.jsonl  2026-06-30-fix-stale-cycle-comment.jsonl  2026-07-01-authoring-conformance-feedback-v6.jsonl  2026-07-01-codex-stop-delivery.jsonl  2026-07-02-active-change-recency.jsonl  2026-07-02-authoring-parallel-checks.jsonl  2026-07-02-gitignore-daemon-runtime.jsonl  2026-07-02-p0-gate-soundness-v3.jsonl  2026-07-02-sync-check-engineering-move-v3.jsonl  2026-07-02-unified-shell-runner.jsonl  2026-07-03-gate-in-process-daemon-demotion-v2.jsonl  2026-07-03-observer-lifecycle-regression-tests.jsonl  2026-07-03-parse-ts-and-encoding-debt.jsonl  2026-07-03-writer-flock-toctou.jsonl  2026-07-04-architecture-fitness-doc.jsonl  2026-07-04-architecture-norm-discovery-skill.jsonl  2026-07-06-codex-coverage-caveat-wording.jsonl  2026-07-06-docs-ia-narrative-layer.jsonl  2026-07-06-plan-redeclare-cli-verb.jsonl  2026-07-06-quickstart-adapters-and-zh-readme.jsonl  2026-07-06-remove-custom-plugin-loading.jsonl  (+13 more)
docs/: ARCHITECTURE.md  README.md  adopting.md  architecture-fitness.md  cli-reference.md  concepts.md  getting-started.md  limitations.md  overview.md  state-machine.md
docs/adapters/: claude-code.md  codex.md  openspec.md  plain.md
docs/decisions/: d-core-is-base.md  d-dangling-check.md  d-decision-records.md  d-events-append-only.md  d-fixed-transition-matrix.md  d-gh-cli-not-rest.md  d-identity-resolution-order.md  d-merge-gate-pure-git.md  d-single-gate-policy.md  d-state-pure-fold.md
docs/plans/: 2026-06-02-superpowers-framework-adapter-design.md  2026-06-02-superpowers-framework-adapter.md  2026-06-03-layer2-merge-gate-design.md  2026-06-03-self-host-hard-gate-design.md  2026-06-03-self-host-hard-gate.md  2026-06-03-sync-gitignore-refresh-design.md  2026-06-03-sync-gitignore-refresh.md  2026-06-04-layer2-merge-gate-plan.md  2026-06-04-review-identity-substrate-design.md  2026-06-04-review-identity-substrate-plan.md  2026-06-05-decision-conformance-harness-design.md  2026-06-08-decision-records-anchors-design.md  2026-06-08-decision-records-anchors-plan.md  2026-06-09-capability-retirement-design.md  2026-06-10-capability-retirement-plan.md  2026-06-11-doc-leg-derivable-docs-design.md  2026-06-11-doc-leg-derivable-docs.md  2026-06-12-decision-text-lock-design.md  2026-06-15-decision-text-lock-implementation.md  2026-06-16-decision-executable-checks-implementation.md  2026-06-17-agents-md-decision-conformance-design.md  2026-06-17-agents-md-decision-conformance-implementation.md  2026-06-20-tier-2-reviewable-anchors-design.md  2026-06-20-tier-2-reviewable-anchors-implementation.md  2026-06-23-arm-decision-teeth-design.md  2026-06-23-arm-decision-teeth-implementation.md  2026-06-23-auto-review-hardening-design.md  2026-06-23-auto-review-hardening-slice1-implementation.md  2026-06-23-auto-review-hardening-slice2-design.md  2026-06-23-auto-review-hardening-slice2-implementation.md  2026-06-23-check-drafting-assist-design.md  2026-06-23-check-drafting-assist.md  2026-06-25-codex-agent-adapter-design.md  2026-06-25-codex-agent-adapter-implementation.md  2026-06-25-doc-deadref-gate-impl.md  2026-06-25-doc-lifecycle-research-reframe.md  2026-06-26-gate-escape-hatch-hardening-design.md  2026-06-26-gate-escape-hatch-hardening-implementation.md  2026-06-26-language-profile-doc-refs-design.md  2026-06-26-language-profile-doc-refs-implementation.md  (+49 more)
examples/arch-norm-fixture/: EXPECTED.md  README.md  package.json
examples/arch-norm-fixture/electron/: main.ts
examples/arch-norm-fixture/src/: renderer.tsx
examples/demo-openspec-claude/: AGENTS.md  README.md
examples/demo-openspec-claude/.claude/: settings.json
examples/demo-openspec-claude/.harness/: adapters.yaml  conventions.md  events.jsonl  gates.yaml  policy.yaml  state.yaml  verification.yaml
examples/demo-openspec-claude/src/: greeter.py
examples/demo-openspec-claude/tests/: test_greeter.py
scripts/: gen_cli_reference.py  gen_state_machine.py  smoke-gate.sh
skills/discovering-architecture-norms/: SKILL.md
src/super_harness/: __init__.py
src/super_harness/adapters/: __init__.py  install.py  registry.py
src/super_harness/cli/: __init__.py  adapter.py  anchor.py  attest.py  change.py  daemon.py  decision.py  doc.py  done.py  errors.py  event.py  exit_codes.py  gate.py  group_options.py  implementation.py  init.py  init_executor.py  init_github.py  init_models.py  init_plan.py  init_ui.py  lazy_group.py  observe.py  on_merge.py  output.py  plan.py  pr.py  report.py  review.py  sensor.py  state.py  status.py  sync.py  verification.py  verify.py  verify_render.py
src/super_harness/core/: __init__.py  _plugin_loader.py  _registry.py  active_change.py  clock.py  (+32 more)
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_plan_authoring_reject_loop.py  test_pre_tool_use_claude_code.py
tests/integration/: test_authoring_parallel.py
tests/unit/: test_smoke.py
(+214 files in other folders)
