[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "super-harness"
version = "0.1.0"
description = "CI-first cross-framework + cross-agent AI coding harness"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "super-harness contributors" }]
dependencies = [
  "click>=8.1",
  "PyYAML>=6.0",
  "python-ulid>=2.2",
  "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pyfakefs>=5.4",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
super-harness = "super_harness.cli:main"
super-harness-daemon = "super_harness.daemon.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/super_harness"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/super_harness/core"]
