[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "super-harness"
version = "0.1.0"
description = "CI-first cross-framework + cross-agent AI coding harness"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "super-harness contributors" }]
keywords = ["ai", "agent", "coding-agent", "ci", "claude-code", "openspec"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "click>=8.4",
  "PyYAML>=6.0",
  "questionary>=2.1,<3",
  "rich>=14,<15",
  "tomli>=2.0; python_version < '3.11'",
  "python-ulid>=2.2",
  "watchdog>=4.0",
  # `python-ulid 3.1.0`'s installed metadata declares NO runtime requires,
  # but its `ulid/__init__.py` does `from typing_extensions import Self` —
  # upstream packaging bug. Declare it explicitly so `pipx install
  # super-harness` works in a clean venv. Editable installs hide this
  # because pytest/dev tools transitively pull typing_extensions into
  # `.venv/`. Smoke walk v4 surfaced this on first wheel install.
  "typing_extensions>=4.0",
]

[project.urls]
Homepage = "https://github.com/Dawinia/super-harness"
Repository = "https://github.com/Dawinia/super-harness"
Issues = "https://github.com/Dawinia/super-harness/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-rerunfailures>=14.0",
  "pyfakefs>=5.4",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
  # Architecture-fitness engine for tier-1 architecture decisions (G-FITNESS).
  # Runs `decision check`'s import-graph contracts locally + in CI; not a
  # runtime dependency of the shipped product. See docs/decisions/d-core-is-base.md.
  "import-linter>=2.0",
]

[project.scripts]
super-harness = "super_harness.cli:main"
super-harness-daemon = "super_harness.daemon.server:main"
super-harness-hook = "super_harness.daemon.hook_entry:main"

[tool.hatch.build]
# Hatchling default sdist includes ALL non-gitignored files. Smoke walk v4
# caught the failure mode: a stale `.venv-review/` (Phase 14 review-session
# leftover not glob-matched by the old `.venv/` gitignore rule) got swept
# into the sdist; its `bin/python3.X` is an absolute symlink and Python
# 3.12+ tarfile rejects absolute-link members on extract → wheel build
# crashes. Explicit exclude here is defense in depth for the gitignore
# `.venv*/` glob — any future leftover venv (`.venv-test`, `.venv-x/`, …)
# stays out of the shipped artifact regardless of `.gitignore` state.
exclude = [
  ".venv*/",
  "private/",
  "dist/",
  "build/",
  ".mypy_cache/",
  ".pytest_cache/",
  ".ruff_cache/",
  "*.egg-info/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/super_harness"]

[tool.hatch.build.targets.sdist]
# sdist includes the project tree minus the global excludes above. We
# additionally drop the in-tree onboarding demo, internal docs/scripts,
# and test corpus from the sdist — they ship via the GitHub repo, not the
# PyPI tarball.
exclude = [
  "examples/",
  "tests/",
  "docs/",
  "scripts/",
]

[tool.pytest.ini_options]
# Limit collection to the main test suite. The demo workspace at
# examples/demo-openspec-claude/ ships its own tests/test_greeter.py for the
# walkthrough, but those expect to be run from inside the demo directory
# (their imports resolve via the demo's own src/ layout); the main suite must
# not collect them.
testpaths = ["tests"]
markers = [
    "e2e: full end-to-end lifecycle tests (real daemon + real git; only gh PATH-shimmed). Skip with -m 'not e2e' if you don't want to run the slow ship-gate test.",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.10"
files = ["src/super_harness"]

[[tool.mypy.overrides]]
module = "super_harness.core.*"
strict = true
